tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__BalanceisEveryth-K0_-BjVuR3qh_GZt19SReQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3850093324380967289,
  "prerequisites": [
    15479227107966238149
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You already transcended dimensions, but as your power demands spike to absurd levels, maybe it's time to transcend matter!\n\nUsing the unbreakable stability of Proto-Halkonite, harnessing the power of [warn]Chaos[/warn] becomes a reality. The  Semi-Stable Antimatter Stabilization Sequencer introduces the concept of Semi-Stable Antimatter, created from Protomatter.\n\nBut it's a cruel mistress... fail to manage it, and antimatter could void itself into nothingness.\n\nThe Semi-Stable Antimatter is produced in 1 second cycles, the amount generated is based on the total of antimatter currently stocked in it's 16 Antimatter Hatches and consumes equal amounts of Proto Matter.\n\nEach cycle, the base production of antimatter per hatch is:\n(1/16)*(§3Antimatter§r)^(0.5 + §6§nC§r).\nThen each hatch will pull a random number from a normal distribution of 0.2 + §b§nA§r and a variance of 1, multiplying the base production with it, meaning the total antimatter change may be negative.\n\nThis causes an imbalance between the hatches. To properly automate the antimatter production, it's vital to always re-balance the amount of antimatter in the hatches. At the end of each cycle, the lowest amount of antimatter present in hatches is recorded, and any hatch that contains more than the lowest amount loses half the difference!\n\nProper use of stabilization fluids can significantly reduce energy usage and boost production:\n\nIt consumes 10,000,000 + (§3Antimatter§r * 1000)^(1.5 - §2§nM§r) EU/t passively\nMagnetic Stabilization Fluids can mitigate the passive instability and have its §2exponent§r reduced:\nMolten Purified Tengam Exponent = §2§n0.1§r\nTachyon-Rich Fluid Exponent = §2§n0.2§r\nMolten MagMatter = §2§n0.3§r\n\nFor each cycle, the SSASS uses (§3Antimatter§r * 10000)^(1.5 - §5§nG§r) EU\nBy regulating the gravity containment of the forge, this §5exponent§r can also be reduced:\nMolten Spacetime Exponent = §5§n0.05§r\nSpatially Enlarged Fluid Exponent = §5§n0.10§r\nMolten Eternity Exponent = §5§n0.15§r\n\nBy containing the antimatter more compactly, it is possible to generate larger gains per cycle. Containment Stabilization fluids alter the §6exponent§r in the production formula:\nMolten Shirabon Exponent = §6§n0.05§r\nMolten MHDCSM Exponent = §6§n0.10§r\n\nBy inserting fluids with high energy potential, it's possible to alter antimatter's flow in chaos, making their randomness more favorable. Activation Stabilization Fluids alter the §baverage§r of the gaussian distribution, lowering the risks of negative changes in antimatter and favoring better gains.\nDepleted Naquadah Fuel Mk V average = §b§n0.05§r\nDepleted Naquadah Fuel Mk VI average = §b§n0.10§r",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Balance is Everything",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15479227107966238149
  ],
  "rewards": [],
  "tasks": []
}
