tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__CalciumBottlenec-9j1Iwd3KRG6jqLI9m6YDKQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15981661469526065961,
  "prerequisites": [
    11808517774577837050
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Craft yourself some bone-strengthening Calcium in plasma form.\n\nThis step is almost twice as fast as the Boron one, so you only need half the reactors, plus one, or the tier above the reactors on the Boron side. It would normally be a lot slower, but the next step needs only a small amount of Calcium.\n\nKeep in mind that, at the end of each of the three fusion chains, the plasma amount gets multiplied, which means that most of your bottlenecks will be near the end of the entire setup, if you're going for Celestial Tungsten Plasma.\n\nYou will need 2.13 reactors with this recipe to feed 1 reactor with the next step.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Calcium Bottlenecking",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11808517774577837050
  ],
  "rewards": [],
  "tasks": []
}
